syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.epam.backendservicesmentoring.stubs.pingpong";

service PingPongService{
  rpc getMessage(PingPongRequest) returns (PingPongResponse);
}

message PingPongRequest{
  string message = 1;
}

message PingPongResponse{
  string message = 1;
  string date_now = 2;
}
